# Double-DQN-BeamRider

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  evaluate.py  generate_plots.py  pyproject.toml  record_video.py  requirements.txt  run_ablations.py  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-ci.yml
apps/beam_rider/: evaluate.py  evaluate_sb3.py  generate_plots.py  record_video.py  run_ablations.py  train.py  train_sb3_lstm.py
apps/beam_rider/configs/: dqn_config.py
assets/gameplay_videos/: rl-video-episode-2.meta.json
configs/: dqn_config.py
docs/reports/: baseline_results.md  environment_analysis.md  evaluation_report.md  literature_review.md
gameplay_videos/: rl-video-episode-1.meta.json
reports/: FINAL_REPORT.md  ablation_study.md  double_dqn_comparison.md
src/evaluation/: evaluator.py
src/replay/: replay_buffer.py
src/training/: trainer.py
tests/: test_preprocessing.py  test_replay_buffer.py
