[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beamrider_dqn"
version = "1.0.0"
description = "A from-scratch Double DQN implementation for Atari Beam Rider"
authors = [{name = "FinDaHuman"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium[atari,accept-rom-license]==0.29.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "jupyter>=1.0"
]

[tool.setuptools.packages.find]
where = ["packages"]
